# kakitori

./: CLAUDE.md  Cargo.build-spec.json  Cargo.toml  flake.nix
src/: diff.rs  lib.rs  lines.rs  marks.rs  range.rs
