[package]
name = "kakitori"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Kakitori (書き取り) — text and buffer operation utilities: line manipulation, range operations, mark management"
homepage = "https://github.com/pleme-io/kakitori"
repository = "https://github.com/pleme-io/kakitori"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["neovim", "buffer", "text", "editing"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.5", features = ["neovim-0-11"] }
tane = { path = "../tane", version = "0.1.0" }
